[package]
authors = ["Aditya Kresna <aditya.kresna@outlook.co.id>", "Nick Hynes <nhynes@nhynes.com>"]
description = "JSON Web Key (JWK) (de)serialization, generation, and conversion."
documentation = "http://docs.rs/kamupay-jsonwebkey/"
edition = "2021"
license = "MIT"
name = "kamupay-jsonwebkey"
readme = "README.md"
repository = "https://github.com/kamupay/jwk-rs"
version = "1.0.24-alpha.10"

[dependencies]
base64 = "0.22"
bitflags = "2.6"
generic-array = "1.1"
jsonwebtoken = { version = "9.3", optional = true }
num-bigint = { version = "0.4", optional = true }
p256 = { version = "0.13", optional = true, features = ["arithmetic"] }
rand = { version = "0.8", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = { version = "0.10", optional = true }
thiserror = "1.0"
yasna = { version = "0.5", optional = true, features = ["num-bigint"] }
zeroize = { version = "1.8", features = ["zeroize_derive"] }

[features]
generate = ["p256", "rand"]
jwt-convert = ["jsonwebtoken", "pkcs-convert"]
pkcs-convert = ["num-bigint", "yasna"]
thumbprint = ["sha2"]

[dev-dependencies]
jsonwebtoken = "8.0"

[package.metadata.docs.rs]
all-features = true
